３週目に向けて修正

--- a/text/01-イントロ.md
+++ b/text/01-イントロ.md
@@ -111,31 +111,31 @@ t.rt(90)
 プロでも，最初から意図したプログラムを書くのは難しいものです． プログラム上達の早道は，一回で動かそうとせずに， 早くバグを見つけて，修正できるようになるようになるように心がけることです．
 
 ## 練習問題
-### 正五角形描こう
+### 正五角形を描くプログラム
 進める（fd）命令や，回す（rt）命令を使って，正五角形を描くプログラムを作りましょう．
 
 ![正五角形](img/chapter01/pentagon.png)
 ファイル名は「pentagon.js」とすること．
 
-### 星を描こう
+### 星を描くプログラム
 進める（fd）命令や，回す（rt）命令を使って，星を描くプログラムを作りましょう．
 
 ![星](img/chapter01/star.png)
 ファイル名は「star.js」とすること．
 
-### こんぺいとうを描こう
+### こんぺいとうを描くプログラム
 進める（fd）命令や，回す（rt）命令を使って，こんぺいとうを描くプログラムを作りましょう．
 
 ![こんぺいとう](img/chapter01/confetti.png)
 ファイル名は「confetti.js」とすること．
 
-### トライフォースを描こう
+### トライフォースを描くプログラム
 進める（fd）命令や，回す（rt）命令を使って，トライフォースを描くプログラムを作りましょう．
 
 ![トライフォース](img/chapter01/triforce.png)
 ファイル名は「triforce.js」とすること．
 
-### 好きな図形を描こう
+### 好きな図形を描くプログラム
 タートルを使って，好きな絵を描くプログラムを作りましょう．
 
 ファイル名は「myfavorite.js」とすること．
