--- a/text/03-条件分岐.md
+++ b/text/03-条件分岐.md
@@ -463,17 +463,17 @@ if( [条件式] ) {
 スコープ外なら同じ変数名を使うことができます． その場合，それぞれの変数が違う値を持つことになります．
 
 ## 練習問題
-### 絵の描き分けプログラムを作ろう
+### 絵の描き分けプログラム
 前回作ったプログラムを改造して，条件式を使って， ユーザの入力に応じて，タートルの書く絵を変えるプログラムを書いてください． 余裕がある人は，条件文を駆使して実用的なプログラムに挑戦してみてください．
 
 ファイル名は「figureshop.js」とすること．
 
-### 評点グレード変換プログラムを作ろう
+### 評点グレード変換プログラム
 入力と条件分岐を使って，「秀」「優」「良」「可」「不可」を表示するプログラムを作りましょう． ユーザが評点を入力すると，それに応じたグレードが表示されるようにプログラムを書いてください．ただし，90点以上が秀，80点以上が優，70点以上が良，60点以上が可，それ以外は不可とする．
 
 ファイル名は「grade.js」とすること．
 
-### おみくじプログラムを作ろう
+### おみくじプログラム
 乱数と条件分岐を使って，「大吉」「中吉」「小吉」「凶」を表示するプログラムを作りましょう．結果は大吉20%, 中吉30%, 小吉30%, 凶20%の確率で出るようにしてください．
 
 ファイル名は「omikuji.js」とすること．
