--- a/text/04-繰り返し.md
+++ b/text/04-繰り返し.md
@@ -198,7 +198,7 @@ var t = createTurtle();
 }
 ```
 
-## コラム：カウントは0から？1から?{.nunumbered}
+## コラム：カウントは0から？1から?{.unnumbered}
 先程のプログラムでは，iを1からカウントして，360以内の時，つまり，361になった時にループから抜けて，プログラムを止めていました．
 以下のように，iを0からカウントして，360より小さい，つまり360になった時にループから抜けて，プログラムを止めても同じことができます．
 ```{#lst:4-1 .javascript .numberLines caption="Circle"}
@@ -218,32 +218,32 @@ var t = createTurtle();
 
 ファイル名は「Circle.java」とすること． -->
 
-### while文，for文の書き換え
-4.2.2 の家をプログラム（while文書き換え版）をfor文に書き換えてみましょう．
+### while文からfor文への書き換え
+「4.2.2 家を描くプログラム（while文書き換え版）」をfor文に書き換えてみましょう．
 
 ファイル名は「housefor.js」とすること．
 
-### 円の描かれ方について考察しよう
+### 円の描かれ方についての考察
 一回の繰り返しで動く大きさ(fd(1))と，角度(rt(1))の数字を変更すと，円の大きさを変えることができます． いろいろ数字を変えて，どのようにすると自分の思った円がかけるか，考察してください．
 
-ヒント: 大きさと角度を入力できるようにすると，数字を変えるたびにコンパイルする必要がないので，いろいろ実験できますよ． そのようなプログラムにしてから，実験することをお奨めします．
+ヒント: 大きさと角度を入力できるようにすると，大きさや角度を変える時にプログラムを書き換える必要がないので，実験しやすくなります．
 
-### 四角形を繰り返しを使って描こう
-四角形を描くプログラムを繰り返しを使って書いてみましょう．
+### 四角形を描くプログラム（繰り返しを使って）
+四角形を描くプログラムを繰り返しを使って書き直してみましょう．
 
 ファイル名は「box.js」とすること．
 
-### 五角形を繰り返しを使って描こう
+### 五角形を描くプログラム（繰り返しを使って）
 五角形を描くプログラムを繰り返しを使って書き直してみましょう．
 
 ファイル名は「pentagon3.js」とすること．
 
-### 星を繰り返しを使って描こう
+### 星を描くプログラム（繰り返しを使って）
 星を描くプログラムを繰り返しを使って書き直してみましょう．
 
 ファイル名は「star3.js」とすること．
 
-### アスタリスクを繰り返しを使って描こう
+### アスタリスクを描くプログラム（繰り返しを使って）
 アスタリスクを描くプログラムを繰り返しを使って書いてみましょう．
 
 ![アスタリスク](img/chapter04/q_asterisk.jpg)
