--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -36,27 +36,31 @@ var t = createTurtle();
 ### ブロックの入れ子
 ブロックは中括弧({})で囲まれた部分のことを言います．
 
-下図のように，プログラムのifブロックやwhileブロックはいくつでも入れ子にすることができます．
+下図のように，プログラムのifブロックやwhileブロック, forブロックなどはいくつでも入れ子にすることができます．
 
 <div class="CJPicture">
 ![ブロックの入れ子](img/chapter05/blocknest.png)
 </div>
 
-### コンパイルエラーに注意{.nunumbered}
-ブロックを示す中括弧は必ず対応していなくてはなりません． 開き括弧が余ったり，閉じ括弧が余ったりすると，コンパイルエラーとなります．
+<!-- ### コンパイルエラーに注意{.nunumbered}
+ブロックを示す中括弧は必ず対応していなくてはなりません． 開き括弧が余ったり，閉じ括弧が余ったりすると，コンパイルエラーとなります． 
+括弧違いの場合，コンピュータはブロックを勘違いしてしまうので， よけいなコンパイルエラーが（たくさん）でます． たくさんのコンパイルエラーが一気にでたら，まず括弧の対応関係を確かめましょう．-->
 
-括弧違いの場合，コンピュータはブロックを勘違いしてしまうので， よけいなコンパイルエラーが（たくさん）でます． たくさんのコンパイルエラーが一気にでたら，まず括弧の対応関係を確かめましょう．
+### カッコの対応エラーに注意{.unnumbered}
+ブロックを示す中括弧は開きカッコと閉じカッコが必ず対応していなくてはなりません．
+開き括弧が余ったり，閉じ括弧が余ったりすると，構文エラーとなります．
+
 
 ### インデント
-第3回の時にも指摘しましたが，インデントをつけると括弧の対応関係やブロックの範囲が分かりやすくなります． インデントがついていないソースは受理しません．
-
-見やすいだけでなく，これができていないためにコンパイルエラーで動かない場合が非常に多いので， 注意してください．
+第3回の時にも指摘しましたが，インデントをつけると括弧の対応関係やブロックの範囲が分かりやすくなります．
+インデントがついていないソースは受理しません．
+見やすいだけでなく，これができていないために構文エラーで動かない場合が非常に多いので， 注意してください．
 
 <div class="CJPictureS">
 ![インデント](img/chapter05/indent.png)
 </div>
 
-PikePlace環境では，[Ctrl-s](Ctrlキーを押しながらsキーを押す)で，フォーマットをするとよいです．
+PikePlace環境では，[Ctrl-s](Ctrlキーを押しながらsキーを押す)で，フォーマット（自動的に字下げをすること）ができます．
 
 ## 入れ子と並列の違いの考察：花を描くプログラム
 入れ子の応用として，花を描くプログラムを考えてみましょう．
@@ -221,25 +225,25 @@ for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
 このプログラムでは，剰余演算子と，先ほど説明した繰り返しの変数を利用して， 繰り返した数が偶数なら四角，奇数なら三角を描くようにプログラムされています．
 
 ## 練習問題
-### 四角形を10個描くプログラムを作ろう
+### 四角形を10個描くプログラム
 
 ![10個描くプログラム](img/chapter05/q_tenboxes.jpg)
 
 ファイル名は「tenboxes.js」とすること．
 
-### 四角形を100個描くプログラムを作ろう
+### 四角形を100個描くプログラム
 
 ![四角形を100個描くプログラム](img/chapter05/q_hundredboxes.jpg)
 
 ファイル名は「hundredboxes.js」とすること．
 
-### 四角形と三角形を交互に100個描くプログラムを作ろう
+### 四角形と三角形を交互に100個描くプログラム
 
 ![四角形と三角形を交互に100個描くプログラム](img/chapter05/q_hundredboxes2.jpg)
 
 ファイル名は「hundredboxes2.js」とすること．
 
-### 貝殻を描くプログラムを作ろう
+### 貝殻を描くプログラム
 
 ![貝殻を描くプログラム](img/chapter05/q_shell.jpg)
 
@@ -251,21 +255,21 @@ for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
 
 ファイル名は「shell.js」とすること．
 
-### タイヤを描くプログラムを作ろう
+### タイヤを描くプログラム
 
-![タイヤを描くプログラム](img/chapter05/q_tire.jpg)
+![タイヤを描くプログラム](img/chapter05/q_tire.gif)
 
 ヒント：ずらす角度は8度, 四角の１辺は10歩にするとうまくいく． 真ん中の円は多少ずれていても構わない．
 
 ファイル名は「tire.js」とすること．
 
-### ドラえもんを描くプログラムを作ろう
+### ドラえもんを描くプログラム
 
 ![ドラえもんを描くプログラム](img/chapter05/q_doraemon.gif)
 
 ファイル名は「doraemon.js」とすること．
 
-### キーボードを描くプログラムを作ろう
+### キーボードを描くプログラム
 
 ![キーボードを描くプログラム](img/chapter05/q_keyboard.png)
 
