--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -226,13 +226,12 @@ for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
 
 ## 練習問題
 ### 四角形を10個描くプログラム
-
+四角形を横に並べて１０個描くプログラムを作ってみよう
 ![10個描くプログラム](img/chapter05/q_tenboxes.jpg)
-
 ファイル名は「tenboxes.js」とすること．
 
 ### 四角形を100個描くプログラム
-
+四角形を１００個を１０ｘ１０に並べて描くプログラムを作ってみよう
 ![四角形を100個描くプログラム](img/chapter05/q_hundredboxes.jpg)
 
 ファイル名は「hundredboxes.js」とすること．
