--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -1,5 +1,5 @@
 
-# 命令をつくる（１）：関数．引数付関数
+# 命令をつくる：関数．引数付関数
 
 ## 学習目標
 - 関数を使ったプログラムを作れるようになる
@@ -402,7 +402,7 @@ function moveTurtle(direction, distance) {
 }
 ```
 
-## ライブラリ{.unnumbered}
+## コラム：ライブラリ{.unnumbered}
 実は今まで使っていたfd，rtという命令は，以下のような関数として定義されていたのでした．
 
 - `function fd(length){...省略...}`
@@ -410,19 +410,73 @@ function moveTurtle(direction, distance) {
 
 ある目的のために使う関数の集まりを作り，関数群を再利用します． この関数の集まりのことを「ライブラリ」といいます． fd, rtなどのタートルに使う命令は「タートルライブラリ」としてどこかに定義されているのです．
 
+<!-- ## コラム：亀に命令を追加する{.unnumbered}
+Javascriptで関数の定義をする方法には，次のような書き方もあります．
+
+```
+var drawRectangle = function(length){
+    for(var i=0;i<4;i++){
+        t.fd(length);
+        t.rt(90);
+    }
+}
+```
+
+この例では関数を定義して，drawRectangle変数に代入しています．
+この書法を利用して，亀に命令を追加することができます． -->
+
+
 ## 練習問題
-### 円を描く関数を作ろう
+<!-- ### 円を描く関数を作ろう
 円を描く関数「function drawCircle()」を作ってください． できたら，start関数から2回以上呼び出して，うまく動作するか確かめてみよう．
 
-ファイル名は「circle2.js」とすること．
+ファイル名は「circle2.js」とすること． -->
 
-### 大きさが変わる家を描く関数を作ろう
-大きさを指定して家を描く関数（窓はなくて良い）「function drawHouse(size)」を作ってください． できたら，start関数から2回以上呼び出して，うまく動作するか確かめてみよう．
+### 四角形を横に並べて１０個描くプログラム(関数を使って)
+
+四角形を横に並べて１０個描くプログラム
+
+![10個描くプログラム](img/chapter05/q_tenboxes.jpg)
+
+について，四角形を描く以下の関数を定義し，これを利用することで描いてみよう．
+```
+function drawRectangle(length){
+    for(var i=0;i<4;i++){
+        t.fd(length);
+        t.rt(90);
+    }
+}
+```
+
+ファイル名は「tenboxes2.js」とすること．
+
+### 四角形を横に並べてN個描くプログラム(引数付関数を使って)
+
+上の問題について，プログラム全体を関数にして引数n（四角形の個数）をとるようにし，
+
+```
+drawBoxes(10);
+```
+とすると，１０個の四角形を描き，
+
+```
+drawBoxes(5);
+```
+とすると，５個の四角形を描くプログラムを書きなさい．
+
+ファイル名は「tenboxes3.js」とすること．
+
+<!-- ### 四角形を100個描くプログラム
+四角形を１００個を１０ｘ１０に並べて描くプログラムを作ってみよう
+![四角形を100個描くプログラム](img/chapter05/q_hundredboxes.jpg) -->
+
+### 大きさが変わる家を描くプログラム
+大きさを指定して家を描く関数（窓はなくて良い）「function drawHouse(size)」を作ってください． できたら，2回以上呼び出して，うまく動作するか確かめてみよう．
 
 ファイル名は「twohouses.js」とすること．
 
-### 中心角を指定して円弧を描く関数を作ろう
-中心角を指定して円弧を描く関数「function drawArc(angle)」を作ってください．
+### 中心角を指定して円弧を描くプログラム
+中心角を指定して円弧を描く関数「function drawArc(angle)」を作り，テストしてください．
 
 (ヒント：中心角が３６０ならば円に，１８０ならば半円に，１ならば点のようになります．以下に，120度の場合と，300度の場合の例を示します）
 
@@ -430,29 +484,37 @@ function moveTurtle(direction, distance) {
 
 ![円弧を描く関数2](img/chapter06/q_drawarc2.png)
 
-### レモン型の図形を描く関数を作ろう
-drawArc(angle)を利用してレモン型の図形を描く関数「function drawLemon()」を作ってください.
+ファイル名は「drawarc.js」とすること．
+
+### レモンを描くプログラム
+drawArc(angle)を利用してレモン型の図形を描く関数「function drawLemon()」を作り，呼び出してテストをしてください．
+
+ファイル名は「drawlemon.js」とすること．
 
 ![レモン型の図形を描く関数](img/chapter06/q_drawlemon.png)
 
-### 関数の多段呼び出しの練習をしよう
-蝶を描く関数drawButterfly()を作ってください． 関数構造図による設計もすること． （ヒント：円弧を描く関数のほかにも，レモン型を描く関数などを部品として使う）
+### ちょうちょを描くプログラム（関数の多段呼び出しの練習）
+蝶を描く関数drawButterfly()を作ってください．（ヒント：レモン型を描く関数drawLemon()を部品として使う）
 
 ![蝶を描く関数](img/chapter06/q_drawbutterfly.png)
 
 ファイル名は「butterfly.js」とすること．
 
-### 関数の再利用をしよう
-drawLemon()を再利用して，drawFlower()のように花を描く関数を作ろう．
+### 花を描くプログラム（関数の再利用）
+drawLemon()を再利用して，drawFlower()のように花を描く関数をつくってください．
 
 ![花を描く関数](img/chapter06/q_drawflower.png)
 
 ファイル名は「flower.js」とすること．
 
-### マス目
+### マス目を描くプログラム
 x行y列のマス目を書く関数を作ろう．以下のような定義を持つ
 					
-`function drawMasume(int row, int col, int size) {．．．なかみ．．．}`
+```
+function drawMasume(row, col, size) {
+    ．．．なかみ．．．
+}
+```
 				
 出力例を以下に示す．
 
