６章を微調整

--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -127,7 +127,7 @@ Javaでは，関数の中に関数を定義することはできません．（ 
 ![関数の設計](img/chapter06/design1-1.png)
 </div>
 
-リスト 12.3.2.1 DrawTwoRectangles1.js
+<!-- リスト 12.3.2.1 DrawTwoRectangles1.js -->
 ```{#lst:6-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
@@ -157,7 +157,7 @@ function drawSmallRectangle() {
 ![関数の設計](img/chapter06/design1-2.png)
 </div>
 
-リスト 12.3.2.2 DrawTwoRectangles2.js
+<!-- リスト 12.3.2.2 DrawTwoRectangles2.js -->
 ```{#lst:6-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
@@ -264,6 +264,8 @@ function drawRegularPolygon(n, size) {
 ```{#lst:6-1 .javascript .numberLines caption="ScopeError"}
 var t = createTurtle();
 
+start();
+
 function start(){
     var length = input("一辺の長さ？");
     drawRectangle();
@@ -275,11 +277,9 @@ function drawRectangle(){
         t.rt(90);
     }
 }
-
-start();
 ```
 
-大きさを変えて四角形を描くプログラム（コンパイルエラー）を実行しても，入力した大きさの四角形が描かれず，大きさ0の四角形が描かれます．
+上記のプログラムを実行しても，入力した大きさの四角形が描かれず，大きさ0の四角形が描かれます．
 					
 これは，t.fd(length)のlengthという変数が参照できず，0と置き換えられてしまうための動作です．lengthという変数が参照できないのは，drawRectangle()関数の内部（{と}で囲われた部分）が，lengthという変数の有効範囲外であるためです．
 
@@ -293,6 +293,8 @@ start();
 ```{#lst:6-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
+start();
+
 function start(){
     var length = input("一辺の長さ？");
     drawRectangle(length);
@@ -305,7 +307,6 @@ function drawRectangle(length){
     }
 }
 
-start();
 ```
 
 <!-- ```					
@@ -333,7 +334,7 @@ start();
 この設計を実装したものを下に載せます．
 
 ### 窓付きの家を描くプログラム（引数を用いた，多角形を描く関数の抽象化）
-リスト 12.5.1.1 House05.js
+<!-- リスト 12.5.1.1 House05.js -->
 ```{#lst:6-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
