シングルクォーテーション，ダブルクォーテーションを統一

--- a/text/01-イントロ.md
+++ b/text/01-イントロ.md
@@ -43,7 +43,7 @@ t.fd(50);
 右辺の`createTurtle()`関数を呼び出してタートルを一つ作成し，
 `var t`で，tという名前の変数を一つ作成し，作成したタートルへの参照を代入します．
 
-と説明しても難しいでしょうから，まずは，これは"おまじない"だと思って，タートルグラフィックスを扱うプログラムでは最初に記述しておいておいてください．
+と説明しても難しいでしょうから，まずは，これは「おまじない」だと思って，タートルグラフィックスを扱うプログラムでは最初に記述しておいておいてください．
 
 ### タートルの命令
 t.rt(30)やt.fd(60)がタートルに指示する命令です．
