--- a/text/03-条件分岐.md
+++ b/text/03-条件分岐.md
@@ -20,7 +20,7 @@ var t = createTurtle();
 var pictureNumber;// 絵の番号
 
 {// ユーザから入力を受け取る
-    pictureNumber = input("書きたい絵の番号を入力してください．(1.家, 2.星)");
+    pictureNumber = input('書きたい絵の番号を入力してください．(1.家, 2.星)');
 }
 
 if (pictureNumber == 1) {// 入力された番号が1ならば
@@ -75,7 +75,7 @@ if (pictureNumber == 1) {// 入力された番号が1ならば
 
 いままでのプログラムでは，命令が必ず上から順番に全て実行されていました． これを順次実行といいます．
 
-今回登場する"条件分岐"を使うと，命令の実行される順番を変更，制御することができます．
+今回登場する「条件分岐」を使うと，命令の実行される順番を変更，制御することができます．
 
 条件分岐の一般的な形は次のとおりです．
 
@@ -289,7 +289,7 @@ if (handNumber == 1) {
 
 } else { // 1,2,3以外の場合
 
-    println("不正な数です．");
+    println('不正な数です．');
 
 }
 ```
@@ -330,26 +330,26 @@ var weight; // 体重
 var rohrer; // ローレル指数
 
 {// ユーザの入力を受け取る
-    height = input("身長を入力してください");
-    weight = input("体重を入力してください");
+    height = input('身長を入力してください');
+    weight = input('体重を入力してください');
 }
 
 {// ローレル指数を求める
     rohrer = weight * 10000000 / height / height / height;
-    println("ローレル指数は" + rohrer + "です．");
+    println('ローレル指数は' + rohrer + 'です．');
 }
 
 {// 体型に対するコメントを提示する
     if (rohrer < 100) {
-        println("やせすぎですね．");
+        println('やせすぎですね．');
     } else if (rohrer < 115) {
-        println("やせていますね．");
+        println('やせていますね．');
     } else if (rohrer < 145) {
-        println("普通ですね．");
+        println('普通ですね．');
     } else if (rohrer < 160) {
-        println("太っていますね．");
+        println('太っていますね．');
     } else {
-        println("太りすぎですね．");
+        println('太りすぎですね．');
     }
 }
 ```
@@ -377,30 +377,30 @@ var weight; // 体重
 var rohrer; // ローレル指数
 
 {// ユーザの入力を受け取る
-    height = input("身長を入力してください");
-    weight = input("体重を入力してください");
+    height = input('身長を入力してください');
+    weight = input('体重を入力してください');
 }
 
 {// ローレル指数を求める
     rohrer = weight * 10000000 / height / height / height;
-    println("ローレル指数は" + rohrer + "です．");
+    println('ローレル指数は' + rohrer + 'です．');
 }
 
 {// 体型に対するコメントを提示する
     if (rohrer < 100) {
-        println("やせすぎですね．");
+        println('やせすぎですね．');
     }
     if (rohrer >= 100 && rohrer < 115) {
-        println("やせていますね．");
+        println('やせていますね．');
     }
     if (rohrer >= 115 && rohrer < 145) {
-        println("普通ですね．");
+        println('普通ですね．');
     }
     if (rohrer >= 145 && rohrer < 160) {
-        println("太っていますね．");
+        println('太っていますね．');
     }
     if (rohrer >= 160) {
-        println("太りすぎですね．");
+        println('太りすぎですね．');
     }
 }
 ```
