--- a/text/04-繰り返し.md
+++ b/text/04-繰り返し.md
@@ -67,7 +67,7 @@ var t = createTurtle();
 }
 ```
 
-今回登場した"繰り返し"を使うと，プログラムを繰り返すことができます．
+今回登場した「繰り返し」を使うと，プログラムを繰り返すことができます．
 
 繰り返しの一般的な形は次のとおりです．
 
