--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -27,7 +27,7 @@ var t = createTurtle();
 
 ![窓を描くプログラム](img/chapter05/foursquares.jpg)
 
-前回，四角形を描くには繰り返しを使うことを習いました．今回は，さらにその四角形を何個も描くために， もう一つ外側に繰り返しを作って，"繰り返しを繰り返す"ということをやっています．
+前回，四角形を描くには繰り返しを使うことを習いました．今回は，さらにその四角形を何個も描くために， もう一つ外側に繰り返しを作って，「繰り返しを繰り返す」ということをやっています．
 
 入れ子の様子はフローチャートで示すとよく分かります．
 
