--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -267,7 +267,7 @@ var t = createTurtle();
 start();
 
 function start(){
-    var length = input("一辺の長さ？");
+    var length = input('一辺の長さ？');
     drawRectangle();
 }
 
@@ -296,7 +296,7 @@ var t = createTurtle();
 start();
 
 function start(){
-    var length = input("一辺の長さ？");
+    var length = input('一辺の長さ？');
     drawRectangle(length);
 }
 
