--- a/text/07-再帰.md
+++ b/text/07-再帰.md
@@ -33,11 +33,11 @@ n! = n * (n-1)!
 
 <!-- リスト 14.2.2.1 Factorial.js -->
 ```{#lst:7-1 .javascript .numberLines caption="House"}
-println("factorial(1) = " + factorial(1));
-println("factorial(2) = " + factorial(2));
-println("factorial(3) = " + factorial(3));
-println("factorial(4) = " + factorial(4));
-println("factorial(5) = " + factorial(5));
+println('factorial(1) = ' + factorial(1));
+println('factorial(2) = ' + factorial(2));
+println('factorial(3) = ' + factorial(3));
+println('factorial(4) = ' + factorial(4));
+println('factorial(5) = ' + factorial(5));
 
 function factorial(n) {
     var result;
@@ -69,7 +69,7 @@ if (n == 1) {
 
 <!-- リスト 14.2.2.2 FactorialWithPrint.js -->
 ```{#lst:7-1 .javascript .numberLines caption="House"}
-print("factorial(5, 0) = " + factorial(5, 0));
+print('factorial(5, 0) = ' + factorial(5, 0));
 
 function factorial(n, indentCount) {
     printStart(n, indentCount);
@@ -85,17 +85,17 @@ function factorial(n, indentCount) {
 
 function printStart(length, indentCount) {
     makeIndent(indentCount);
-    println("factorial(" + length + ", " + indentCount + ")");
+    println('factorial(' + length + ', ' + indentCount + ')');
 }
 
 function printEnd(result, indentCount) {
     makeIndent(indentCount);
-    println("// return " + result);
+    println('// return ' + result);
 }
 
 function makeIndent(indentCount) {
     for (var i = 0; i < indentCount; i++) {
-        print("\t");
+        print('\t');
     }
 }
 ```
@@ -139,13 +139,13 @@ fib(6) = fib(5) + fib(4) = 13
 
 <!-- リスト 14.2.3.1 Fibonacci.js -->
 ```{#lst:7-1 .javascript .numberLines caption="House"}
-println("fib(1) = " + fib(1));
-println("fib(2) = " + fib(2));
-println("fib(3) = " + fib(3));
-println("fib(4) = " + fib(4));
-println("fib(5) = " + fib(5));
-println("fib(6) = " + fib(6));
-println("fib(7) = " + fib(7));
+println('fib(1) = ' + fib(1));
+println('fib(2) = ' + fib(2));
+println('fib(3) = ' + fib(3));
+println('fib(4) = ' + fib(4));
+println('fib(5) = ' + fib(5));
+println('fib(6) = ' + fib(6));
+println('fib(7) = ' + fib(7));
 
 function fib(n) {
     var value;
@@ -164,7 +164,7 @@ function fib(n) {
 
 <!-- リスト 14.2.3.2 FibonacciWithPrint.js -->
 ```{#lst:7-1 .javascript .numberLines caption="House"}
-print("fib(5, 0) = " + fib(5, 0));
+print('fib(5, 0) = ' + fib(5, 0));
 
 function fib(n, indentCount) {
     printStart(n, indentCount);
@@ -182,17 +182,17 @@ function fib(n, indentCount) {
 
 function printStart(length, indentCount) {
     makeIndent(indentCount);
-    println("fib(" + length + ", " + indentCount + ")");
+    println('fib(' + length + ', ' + indentCount + ')');
 }
 
 function printEnd(result, indentCount) {
     makeIndent(indentCount);
-    println("// return " + result);
+    println('// return ' + result);
 }
 
 function makeIndent(indentCount) {
     for (i = 0; i < indentCount; i++) {
-        print("\t");
+        print('\t');
     }
 }
 ```
