--- a/text/08-関数2.md
+++ b/text/08-関数2.md
@@ -16,7 +16,7 @@ main();
 
 function main() {
   var aishow = judge('木村拓哉', '工藤静香');
-  println("相性は" + aishow + "です");
+  println('相性は' + aishow + 'です');
 }
 
 function judge(name1, name2) {
@@ -56,7 +56,7 @@ main();
 
 function main() {
   var aishow = judge('木村拓哉', '工藤静香');
-  println("相性は" + aishow + "です");
+  println('相性は' + aishow + 'です');
 }
 
 function judge(name1, name2) {
@@ -106,31 +106,31 @@ function myRandom(min, max) {
 
 ```
  // アプリケーションの開始を知らせる
- println("西暦和暦変換プログラムを開始します");
+ println('西暦和暦変換プログラムを開始します');
 
  // 西暦を和暦に変換する
  var year;
  var japaneseYear;
 
  // 西暦を入力する
- year = input("西暦を入力してください");
+ year = input('西暦を入力してください');
 
  // 西暦を和暦に変換する
  if (year >= 2019) {
-   japaneseYear = "令和" + (year - 2018);
+   japaneseYear = '令和' + (year - 2018);
  } else if (year >= 1989) {
-   japaneseYear = "平成" + (year - 1988);
+   japaneseYear = '平成' + (year - 1988);
  } else if (year >= 1926) {
-   japaneseYear = "昭和" + (year - 1925);
+   japaneseYear = '昭和' + (year - 1925);
  } else {
-   japaneseYear = "不明";
+   japaneseYear = '不明';
  }
 
  // 変換結果を出力する
- println(year + "年は" + japaneseYear + "年です.");
+ println(year + '年は' + japaneseYear + '年です.');
 
  // アプリケーションの終了を知らせる
- println("西暦和暦変換プログラムを終了します");
+ println('西暦和暦変換プログラムを終了します');
 ```
 
 ### 構造化された西暦変換プログラム
@@ -155,7 +155,7 @@ function convertYear() {
 
 // 西暦を入力する
 function inputYear() {
-  var year = input("西暦を入力してください");
+  var year = input('西暦を入力してください');
   return year;
 }
 
@@ -163,30 +163,30 @@ function inputYear() {
 function convertToJapaneseYear(year) {
   var japaneseYear;
   if (year >= 2019) {
-    japaneseYear = "令和" + (year - 2018);
+    japaneseYear = '令和' + (year - 2018);
   } else if (year >= 1989) {
-    japaneseYear = "平成" + (year - 1988);
+    japaneseYear = '平成' + (year - 1988);
   } else if (year >= 1926) {
-    japaneseYear = "昭和" + (year - 1925);
+    japaneseYear = '昭和' + (year - 1925);
   } else {
-    japaneseYear = "不明";
+    japaneseYear = '不明';
   }
   return japaneseYear;
 }
 
 // 変換結果を出力する
 function showResult(year, japaneseYear) {
-  println(year + "年は" + japaneseYear + "年です.");
+  println(year + '年は' + japaneseYear + '年です.');
 }
 
 // アプリケーションの開始を知らせる
 function showTitle() {
-  println("西暦和暦変換プログラムを開始します");
+  println('西暦和暦変換プログラムを開始します');
 }
 
 // アプリケーションの終了を知らせる
 function showEndTitle() {
-  println("西暦和暦変換プログラムを終了します");
+  println('西暦和暦変換プログラムを終了します');
 }
 ```
 
@@ -200,10 +200,10 @@ function showEndTitle() {
 main();
 
 function main() {
-  println("calculatePower(" + 2 + ", " + 2 + ") = " + calculatePower(2, 2));
-  println("calculatePower(" + 2 + ", " + 3 + ") = " + calculatePower(2, 3));
-  println("calculatePower(" + 2 + ", " + 4 + ") = " + calculatePower(2, 4));
-  println("calculatePower(" + 3 + ", " + 3 + ") = " + calculatePower(3, 3));
+  println('calculatePower(' + 2 + ', ' + 2 + ') = ' + calculatePower(2, 2));
+  println('calculatePower(' + 2 + ', ' + 3 + ') = ' + calculatePower(2, 3));
+  println('calculatePower(' + 2 + ', ' + 4 + ') = ' + calculatePower(2, 4));
+  println('calculatePower(' + 3 + ', ' + 3 + ') = ' + calculatePower(3, 3));
 }
 
 // 累乗を計算する
@@ -235,7 +235,7 @@ function main() {
 }
 
 function test(base, exp) {
-  println("calculatePower(" + base + ", " + exp + ") = " + calculatePower(base, exp));
+  println('calculatePower(' + base + ', ' + exp + ') = ' + calculatePower(base, exp));
 }
 
 // 累乗を計算する
@@ -268,13 +268,13 @@ function main() {
 
 function test(base, exp, expected) {
   var answer = calculatePower(base, exp);
-  var result = "";
+  var result = '';
   if (answer == expected) {
-    result = "PASS";
+    result = 'PASS';
   } else {
-    result = "FAIL";
+    result = 'FAIL';
   }
-  println("calculatePower(" + base + ", " + exp + ") = " + answer + ", 判定: " + result);
+  println('calculatePower(' + base + ', ' + exp + ') = ' + answer + ', 判定: ' + result);
 }
 
 // 累乗を計算する
