--- a/text/02-変数.md
+++ b/text/02-変数.md
@@ -252,7 +252,7 @@ var t = createTurtle(); //　タートルを生成する
 var length;// 1辺の長さ
 var rightAngle = 90;// 直角
 
-length = input("1辺の長さを入力してください");// 1辺の長さを入力値に設定する
+length = input('1辺の長さを入力してください');// 1辺の長さを入力値に設定する
 
 {// 屋根を書く
     t.rt(30); // 30度右に回る
