８章のプログラムを修正

--- a/text/08-関数2.md
+++ b/text/08-関数2.md
@@ -95,7 +95,8 @@ function main() {
 }
 
 function myRandom(min, max) {
-  return random(max - min) + min;
+  var generated = random(max - min + 1) + min;
+  return generated;
 }
 ```
 
