８章，居駒先生のレビューに基づき，問題を修正

--- a/text/08-関数2.md
+++ b/text/08-関数2.md
@@ -1,8 +1,9 @@
-# プログラムの部品化（２）（戻り値）
+# 命令をつくる（２）：戻り値付き関数
 
 ## 学習目標
 - 戻り値を持つ関数を使ったプログラムを作れるようになる
-- 入出力を持つ関数を使ったプログラムを作れるようになる
+- 関数を作ることによって，プログラムの汎用化や構造化をすることができる．
+- 関数に対応した単体テストを作れるようになる．
 
 ## 戻り値付関数
 
