２週目のために更新

--- a/text/03-条件分岐.md
+++ b/text/03-条件分岐.md
@@ -19,57 +19,47 @@ var t = createTurtle();
 
 var pictureNumber;// 絵の番号
 
-{// ユーザから入力を受け取る
-    pictureNumber = input('書きたい絵の番号を入力してください．(1.家, 2.星)');
-}
+// ユーザから入力を受け取る
+pictureNumber = input('書きたい絵の番号を入力してください．(1.家, 2.星)');
 
-if (pictureNumber == 1) {// 入力された番号が1ならば
-    {// c//家を書く
+if (pictureNumber == 1) {// 入力された番号が1ならば家を書く
+    var length = 50;// 1辺の長さ
+    var rightAngle = 90;// 直角
 
-        var length = 50;// 1辺の長さ
-        var rightAngle = 90;// 直角
+    // 屋根を書く
+    t.rt(30); // 30度右に回る
+    t.fd(length); // x歩前に進む
+    t.rt(120);
+    t.fd(length);
+    t.rt(120);
+    t.fd(length);
 
-        {// 屋根を書く
-            t.rt(30); // 30度右に回る
-            t.fd(length); // x歩前に進む
-            t.rt(120);
-            t.fd(length);
-            t.rt(120);
-            t.fd(length);
-        }
+    // 本体を書く
+    t.lt(rightAngle);
+    t.fd(length);
+    t.lt(rightAngle);
+    t.fd(length);
+    t.lt(rightAngle);
+    t.fd(length);
+    t.lt(rightAngle);
+    t.fd(length);
 
-        {// 本体を書く
-            t.lt(rightAngle);
-            t.fd(length);
-            t.lt(rightAngle);
-            t.fd(length);
-            t.lt(rightAngle);
-            t.fd(length);
-            t.lt(rightAngle);
-            t.fd(length);
-        }
-    }
+} else {// 入力された番号が1以外ならば星を書く
 
-} else {// 入力された番号が1以外ならば
-    {// c//星を書く
+    var length = 100;// 1辺の長さ
+    var angle = 144;// 星を書くときに曲がる角度
 
-        var length = 100;// 1辺の長さ
-        var angle = 144;// 星を書くときに曲がる角度
-
-        {// 星を書く
-            t.rt(18);
-            t.fd(length);
-            t.rt(angle);
-            t.fd(length);
-            t.rt(angle);
-            t.fd(length);
-            t.rt(angle);
-            t.fd(length);
-            t.rt(angle);
-            t.fd(length);
-        }
-    }
-
+    // 星を書く
+    t.rt(18);
+    t.fd(length);
+    t.rt(angle);
+    t.fd(length);
+    t.rt(angle);
+    t.fd(length);
+    t.rt(angle);
+    t.fd(length);
+    t.rt(angle);
+    t.fd(length);
 }
 ```
 
@@ -137,155 +127,149 @@ var handNumber;// じゃんけんの手
 // じゃんけんの手は　1をグー,2をチョキ,3をパーとする
 handNumber = random(3) + 1; // random(3)は0から2までの値を発生するので1を足す
 
-if (handNumber == 1) {
-    {// c//グーを書く
-        t.fd(30);
+if (handNumber == 1) {//グーを書く
+    t.fd(30);
 
-        t.lt(30);
-        t.fd(25);
-        t.rt(60);
-        t.fd(25);
-        t.rt(150);
-        t.fd(30);
-        t.lt(180);
-        t.fd(20);
+    t.lt(30);
+    t.fd(25);
+    t.rt(60);
+    t.fd(25);
+    t.rt(150);
+    t.fd(30);
+    t.lt(180);
+    t.fd(20);
 
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.lt(90);
-        t.fd(5);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.lt(90);
-        t.fd(5);
+    t.lt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.lt(90);
-        t.fd(5);
+    t.lt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
+    t.lt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
 
-        t.fd(65);
-    }
+    t.fd(65);
 
-} else if (handNumber == 2) {
-    {// c//チョキを書く
+} else if (handNumber == 2) {//チョキを書く
 
-        t.fd(30);
+    t.fd(30);
 
-        t.lt(30);
-        t.fd(25);
-        t.rt(60);
-        t.fd(25);
-        t.rt(150);
-        t.fd(30);
-        t.lt(180);
-        t.fd(30);
+    t.lt(30);
+    t.fd(25);
+    t.rt(60);
+    t.fd(25);
+    t.rt(150);
+    t.fd(30);
+    t.lt(180);
+    t.fd(30);
 
-        t.lt(15);
-        t.fd(80);
-        t.rt(105);
-        t.fd(20);
-        t.rt(75);
-        t.fd(80);
-        t.lt(75);
+    t.lt(15);
+    t.fd(80);
+    t.rt(105);
+    t.fd(20);
+    t.rt(75);
+    t.fd(80);
+    t.lt(75);
 
-        t.lt(75);
-        t.fd(80);
-        t.rt(75);
-        t.fd(20);
-        t.rt(105);
-        t.fd(80);
-        t.fd(20);
-        t.lt(105);
-        t.fd(5);
+    t.lt(75);
+    t.fd(80);
+    t.rt(75);
+    t.fd(20);
+    t.rt(105);
+    t.fd(80);
+    t.fd(20);
+    t.lt(105);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.lt(90);
-        t.fd(5);
+    t.lt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(20);
+    t.lt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(20);
 
-        t.fd(65);
-    }
+    t.fd(65);
 
-} else if (handNumber == 3) {
-    {// c//パーを書く
+} else if (handNumber == 3) {//パーを書く
 
-        t.fd(30);
+    t.fd(30);
 
-        t.lt(30);
-        t.fd(80);
-        t.rt(120);
-        t.fd(20);
-        t.rt(60);
-        t.fd(40);
-        t.lt(150);
-        t.fd(15);
+    t.lt(30);
+    t.fd(80);
+    t.rt(120);
+    t.fd(20);
+    t.rt(60);
+    t.fd(40);
+    t.lt(150);
+    t.fd(15);
 
-        t.fd(80);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(80);
-        t.lt(90);
-        t.fd(5);
+    t.fd(80);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(80);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(80);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(80);
-        t.lt(90);
-        t.fd(5);
+    t.lt(90);
+    t.fd(80);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(80);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(80);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(80);
-        t.lt(90);
-        t.fd(5);
+    t.lt(90);
+    t.fd(80);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(80);
+    t.lt(90);
+    t.fd(5);
 
-        t.lt(90);
-        t.fd(80);
-        t.rt(90);
-        t.fd(20);
-        t.rt(90);
-        t.fd(80);
+    t.lt(90);
+    t.fd(80);
+    t.rt(90);
+    t.fd(20);
+    t.rt(90);
+    t.fd(80);
 
-        t.fd(75);
-    }
+    t.fd(75);
 
 } else { // 1,2,3以外の場合
 
@@ -329,28 +313,25 @@ var height; // 身長
 var weight; // 体重
 var rohrer; // ローレル指数
 
-{// ユーザの入力を受け取る
-    height = input('身長を入力してください');
-    weight = input('体重を入力してください');
-}
+// ユーザの入力を受け取る
+height = input('身長を入力してください');
+weight = input('体重を入力してください');
 
-{// ローレル指数を求める
-    rohrer = weight * 10000000 / height / height / height;
-    println('ローレル指数は' + rohrer + 'です．');
-}
+// ローレル指数を求める
+rohrer = weight * 10000000 / height / height / height;
+println('ローレル指数は' + rohrer + 'です．');
 
-{// 体型に対するコメントを提示する
-    if (rohrer < 100) {
-        println('やせすぎですね．');
-    } else if (rohrer < 115) {
-        println('やせていますね．');
-    } else if (rohrer < 145) {
-        println('普通ですね．');
-    } else if (rohrer < 160) {
-        println('太っていますね．');
-    } else {
-        println('太りすぎですね．');
-    }
+// 体型に対するコメントを提示する
+if (rohrer < 100) {
+    println('やせすぎですね．');
+} else if (rohrer < 115) {
+    println('やせていますね．');
+} else if (rohrer < 145) {
+    println('普通ですね．');
+} else if (rohrer < 160) {
+    println('太っていますね．');
+} else {
+    println('太りすぎですね．');
 }
 ```
 
@@ -376,33 +357,31 @@ var height; // 身長
 var weight; // 体重
 var rohrer; // ローレル指数
 
-{// ユーザの入力を受け取る
-    height = input('身長を入力してください');
-    weight = input('体重を入力してください');
+// ユーザの入力を受け取る
+height = input('身長を入力してください');
+weight = input('体重を入力してください');
+
+// ローレル指数を求める
+rohrer = weight * 10000000 / height / height / height;
+println('ローレル指数は' + rohrer + 'です．');
+
+// 体型に対するコメントを提示する
+if (rohrer < 100) {
+    println('やせすぎですね．');
+}
+if (rohrer >= 100 && rohrer < 115) {
+    println('やせていますね．');
+}
+if (rohrer >= 115 && rohrer < 145) {
+    println('普通ですね．');
+}
+if (rohrer >= 145 && rohrer < 160) {
+    println('太っていますね．');
+}
+if (rohrer >= 160) {
+    println('太りすぎですね．');
 }
 
-{// ローレル指数を求める
-    rohrer = weight * 10000000 / height / height / height;
-    println('ローレル指数は' + rohrer + 'です．');
-}
-
-{// 体型に対するコメントを提示する
-    if (rohrer < 100) {
-        println('やせすぎですね．');
-    }
-    if (rohrer >= 100 && rohrer < 115) {
-        println('やせていますね．');
-    }
-    if (rohrer >= 115 && rohrer < 145) {
-        println('普通ですね．');
-    }
-    if (rohrer >= 145 && rohrer < 160) {
-        println('太っていますね．');
-    }
-    if (rohrer >= 160) {
-        println('太りすぎですね．');
-    }
-}
 ```
 
 今度のプログラムも，前例とやっていることは同じなのですが，条件文がちょっと異なっていますね．
