--- a/text/04-繰り返し.md
+++ b/text/04-繰り返し.md
@@ -14,27 +14,27 @@
 
 ```{#lst:4-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
-{// 屋根を書く
-	t.rt(30);
-	t.fd(50);
-	t.rt(120);
-	t.fd(50);
-	t.rt(120);
-	t.fd(50);
-	t.rt(120);
-	t.lt(30);
-}
+// 屋根を書く
+t.rt(30);
+t.fd(50);
+t.rt(120);
+t.fd(50);
+t.rt(120);
+t.fd(50);
+t.rt(120);
+t.lt(30);
 
-{// 本体を書く
-	t.rt(90);
-	t.fd(50);
-	t.rt(90);
-	t.fd(50);
-	t.rt(90);
-	t.fd(50);
-	t.rt(90);
-	t.fd(50);
-}
+
+// 本体を書く
+t.rt(90);
+t.fd(50);
+t.rt(90);
+t.fd(50);
+t.rt(90);
+t.fd(50);
+t.rt(90);
+t.fd(50);
+
 ```
 
 このプログラム，何度も同じことを書いている個所が2箇所ありますね．どこが同じか考えてみましょう．
@@ -46,24 +46,22 @@ var t = createTurtle();
 ```{#lst:4-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-{// 屋根を書く
-  t.rt(30);
-  var i = 1;
-  while (i <= 3) {
-    t.fd(50);
-    t.rt(120);
-    i = i + 1;
-  }
-  t.lt(30);// 上向きに戻す
+// 屋根を書く
+t.rt(30);
+var i = 1;
+while (i <= 3) {
+  t.fd(50);
+  t.rt(120);
+  i = i + 1;
 }
+t.lt(30);// 上向きに戻す
 
-{// 本体を書く
-  var i = 1;
-  while (i <= 4) {
-    t.rt(90);
-    t.fd(50);
-    i = i + 1;
-  }
+// 本体を書く
+var i = 1;
+while (i <= 4) {
+  t.rt(90);
+  t.fd(50);
+  i = i + 1;
 }
 ```
 
@@ -128,12 +126,12 @@ while( [条件式] ) {
 ```{#lst:4-1 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
-{// 円を書く
-	while (true) {
-		t.fd(1);
-		t.rt(1);
-	}
+// 円を書く
+while (true) {
+  t.fd(1);
+  t.rt(1);
 }
+
 ```
 
 ### 円を描くプログラムの改良
@@ -142,13 +140,12 @@ var t = createTurtle();
 ```{#lst:4-1 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
-{ // 円を書く
-  var i = 1; //繰り返しをカウントする変数
-  while (i <= 360 /* 条件--iが360以下の間 */ ) {
-    t.fd(1);
-    t.rt(1);
-    i = i + 1; //繰り返しカウントを一つ増やす
-  }
+// 円を書く
+var i = 1; //繰り返しをカウントする変数
+while (i <= 360 /* 条件--iが360以下の間 */ ) {
+  t.fd(1);
+  t.rt(1);
+  i = i + 1; //繰り返しカウントを一つ増やす
 }
 ```
 
@@ -165,11 +162,10 @@ for文を使うと，while文よりも短く書くことができます．
 ```{#lst:4-1 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
-{ // 円を書く
-  for (var i = 1; i <= 360; i = i + 1) {
-    t.fd(1);
-    t.rt(1);
-  }
+// 円を書く
+for (var i = 1; i <= 360; i = i + 1) {
+  t.fd(1);
+  t.rt(1);
 }
 ```
 
@@ -190,11 +186,10 @@ for([初期処理] ;[条件式] ;[一回の繰返しの終了処理] ) {
 ```{#lst:4-1 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
-{ // 円を書く
-  for (var i = 1; i <= 360; i++) {
-    t.fd(1);
-    t.rt(1);
-  }
+// 円を書く
+for (var i = 1; i <= 360; i++) {
+  t.fd(1);
+  t.rt(1);
 }
 ```
 
@@ -204,11 +199,10 @@ var t = createTurtle();
 ```{#lst:4-1 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
-{ // 円を書く
-  for (var i = 0; i < 360; i++) {
-    t.fd(1);
-    t.rt(1);
-  }
+// 円を書く
+for (var i = 0; i < 360; i++) {
+  t.fd(1);
+  t.rt(1);
 }
 ```
 
