タートル編第３章のアップデート

--- a/text/00-タイトル.md
+++ b/text/00-タイトル.md
@@ -1,3 +1,10 @@
 % コンピューティング実習 2020
 % 社会情報学部
 % version 1.0
+
+<script>
+    function copycode(idstr){
+        document.getSelection().selectAllChildren(document.getElementById(idstr).querySelector('code')); 
+        document.execCommand('copy');
+    }
+</script>
