--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -50,17 +50,8 @@ for (var j = 1; j <= 4; j++) {
 ブロックを示す中括弧は開きカッコと閉じカッコが必ず対応していなくてはなりません．
 開き括弧が余ったり，閉じ括弧が余ったりすると，構文エラーとなります．
 
-
-### インデント
-第3回の時にも指摘しましたが，インデントをつけると括弧の対応関係やブロックの範囲が分かりやすくなります．
-インデントがついていないソースは受理しません．
-見やすいだけでなく，これができていないために構文エラーで動かない場合が非常に多いので， 注意してください．
-
-<div class="CJPictureS">
-![インデント](img/chapter05/indent.png)
-</div>
-
-PikePlace環境では，[Ctrl-s](Ctrlキーを押しながらsキーを押す)で，フォーマット（自動的に字下げをすること）ができます．
+ブロックの入れ子を作り始めると，第3章で説明した「インデント」がより重要になります．
+「インデント」項をもう一度確認してください．
 
 ## 入れ子と並列の違いの考察：花を描くプログラム
 入れ子の応用として，花を描くプログラムを考えてみましょう．
